Fixed problem with thumbnail description text getting cropped.  Also some minor CSS cleanup.

--- a/css/main.css
+++ b/css/main.css
@@ -83,14 +83,14 @@ a {
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 0px;
+  margin-top: 0;
   width: 960px;
   text-align: center;
 }
 
 #header {
   text-align: center;
-  width: 944px;
+  width: 960px;
   background-color: white;
 }
 
@@ -103,10 +103,11 @@ a {
 }
 
 #site-description {
-  margin: 30px 0 0 0;
   font-size: 16px;
   text-align: left;
-  margin-left: 124px;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
   width: 720px;
 }
 
@@ -140,14 +141,12 @@ a {
 }
 
 .thumbnail a {
-  width: 245px;
+  width: 244px;
   float: left;
-  height: 300px;
+  height: 310px;
   border-radius: 2px;
-  margin-right: -6px;
-  margin-top: -5px;
   color: black;
-  border: 0px;
+  border: 0;
 }
 
 .thumbnail a:hover {
